--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -28,8 +28,8 @@ author1:
   # You can also provide an absolute URL (starting with https://) instead of usernames
   social:
     # twitter:         <username>
-    github:          <MagicNoodleee>
-    # email:           <mail@domain.tld>
+    github:           <MagicNoodleee>
+    email:           <clx_tony@outlook.com>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
